# wadi

./: .gitignore  CMakeLists.txt  build.sh
include/: logging.h  v4l.h  whip.h
include/encoder/: jetson_encoder.h  video_encode.h
include/webrtc/api/: media_transport_interface.h
include/webrtc/modules/video_coding/codecs/nvidia/: NvVideoEncoderFactory.h
include/webrtc/test/: vcm_capturer.h
include/webrtc/video/: video_quality_test.h
src/: main.cpp  v4l.cpp  whip.cpp
src/encoder/: jetson_encoder.cpp
